--- a/src/Budgets/Budgets.csproj
+++ b/src/Budgets/Budgets.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>KMA.ProgrammingInCSharp2021.Budgets</RootNamespace>
   </PropertyGroup>
 
 </Project>
