two default arameters

--- a/src/Budgets/Properties/launchSettings.json
+++ b/src/Budgets/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Budgets": {
       "commandName": "Project",
-      "commandLineArgs": "Vovan"
+      "commandLineArgs": "Vovan Mike"
     }
   }
 }
